--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask==3.1.6
-Flask-SQLAlchemy
-argon2-cffi==25.1.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
+Flask==3.1.0
+supabase==2.10.0
 requests==2.32.5
-werkzeug
+werkzeug==3.1.3
+python-dotenv==1.0.1
